// Vitest Snapshot v1

exports[`snapshots > Readner ChangeSize components 1`] = `
<h1
  class="_heading_e8u9f_1 _heading--size-2xl_e8u9f_13"
>
  Heading label
</h1>
`;

exports[`snapshots > Readner ChangeTag components 1`] = `
<h4
  class="_heading_e8u9f_1 _heading--size-4xl_e8u9f_7"
>
  Heading label
</h4>
`;

exports[`snapshots > Readner Default components 1`] = `
<h1
  class="_heading_e8u9f_1 _heading--size-4xl_e8u9f_7"
>
  Heading label
</h1>
`;
